Update figures (will need another path)

--- a/PyQM.tex
+++ b/PyQM.tex
@@ -516,7 +516,7 @@ kinematical cuts used by HERMES ?}
 \begin{figure}[tbp]
   \centering
 \resizebox{0.45\textwidth}{!}{
-\includegraphics{fig/Ratio_HP3_qhat.eps} 
+\includegraphics{fig/QhatScan.pdf} 
 }
 \caption {Multiplicity ratio of xenon for $z = 0.5$ as a function of $\qhat$. 
 The red dashed line indicates the experimental value measured by HERMES~%
